adjusted css & refractored code to be neater

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
             integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
             crossorigin="anonymous"
         />
-        <title>App</title>
+        <title>Animal APIs</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
